# stocks-api-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: get_quote.rs  search_symbol.rs
src/: chart.rs  lib.rs  quote.rs  symbol.rs  yahoo_finance_api.rs
