[package]
name = "stocks_api"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Stephan Vedder <stephan.vedder@gmail.com>"]
description = "A library to get finance data using YahooFinanceAPI"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"